[package]
name = "seam_carving_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.16.1"
image = "0.25.5"
imgref = "1.11.0"
num-traits = "0.2.17"

[profile.dev]
opt-level = 3
debug = true